--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,3 @@
-body {
-    font-family : 'Nunito Sans', Arial, sans-serif ;
-    font-size : 16px;
-}
-h1, h2 {
-    font-family : 'Raleway', Helvetica, sans-serif ;
-    font-weight : 300 ;
-    margin: 0 .5rem 0 0; 
-}
-h1 {
-    font-size : 3.5rem;
-}
-h2 {
-    font-size : 2.5rem;
-}
 @font-face {
     font-family: 'Material Icons';
     font-style: normal;
@@ -48,19 +33,24 @@ h2 {
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
-.container {
-    width : 960px;
-    margin-left : auto;
-    margin-right : auto;
-    padding: 2.5rem;
+/* whole body rules */
+body {
+    font-family : 'Nunito Sans', Arial, sans-serif ;
+    font-size : 16px;
 }
-p, dl {
-    margin-top : 0;
-    margin-bottom : 1rem;
-}
-dd {
+/* heading rules */
+h1, h2 {
+    font-family : 'Raleway', Helvetica, sans-serif ;
+    font-weight : 300 ;
     margin: 0 .5rem 0 0; 
 }
+h1 {
+    font-size : 3.5rem;
+}
+h2 {
+    font-size : 2.5rem;
+}
+/* navigation rules*/
 nav {
     position: fixed; 
     width : 100%;
@@ -84,6 +74,7 @@ a:hover {
     border-bottom: .8rem;
     transition: all .25s ease-out;
 }
+/* header rules */
 header {
     background-image: url('../img/paul-gilmore-145802-unsplash.jpg');
     background-size: cover;
@@ -92,12 +83,26 @@ header {
     color: white;
     padding-top: 6rem;
 }
+/* menu section rules */
+#menu {
+    background-color: #f0f0f0;
+}
+.container {
+    width : 960px;
+    margin-left : auto;
+    margin-right : auto;
+    padding: 2.5rem;
+}
+p, dl {
+    margin-top : 0;
+    margin-bottom : 1rem;
+}
+dd {
+    margin: 0 .5rem 0 0; 
+}
 p.motto {
     font-style: italic;
     font-size: 1.25rem;
-}
-#menu {
-    background-color: #f0f0f0;
 }
 dt {
     font-size: 125%;
@@ -114,6 +119,7 @@ section img {
     background-color: #e0e0e0;
     line-height: 1.5;
 }
+/* footer rules */
 footer {
     color: white;
     background-color: #3E1305;
